--- a/Golf1/Base.lproj/Main.storyboard
+++ b/Golf1/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Track a Round"/>
                                 <connections>
-                                    <segue destination="gVR-g9-r4n" kind="show" id="Mt7-R7-UsF"/>
+                                    <segue destination="gVR-g9-r4n" kind="show" id="7KA-CI-V5s"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="&quot;The most important shot is the next shot&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTW-yC-adP">
@@ -194,16 +194,6 @@
                                     </textField>
                                 </subviews>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-MA-7jI">
-                                <frame key="frameInset" minX="287" minY="15" width="72" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Submit"/>
-                                <connections>
-                                    <action selector="storeData:" destination="gVR-g9-r4n" eventType="touchUpInside" id="eZo-oK-NnE"/>
-                                    <segue destination="5pP-hR-fwn" kind="show" id="Xio-XO-IvK"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wYu-vu-zTM">
                                 <frame key="frameInset" minX="16" minY="15" width="51" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -211,6 +201,17 @@
                                 <state key="normal" title="Back"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="bFa-3a-KjP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-MA-7jI">
+                                <frame key="frameInset" minX="287" minY="20" width="72" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="storeData:" destination="gVR-g9-r4n" eventType="touchUpInside" id="eZo-oK-NnE"/>
+                                    <action selector="submit1:" destination="gVR-g9-r4n" eventType="touchUpInside" id="0Rx-sg-B3U"/>
+                                    <segue destination="5pP-hR-fwn" kind="show" id="cng-iE-UJh"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -271,9 +272,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                 <state key="normal" title="+"/>
-                                <connections>
-                                    <segue destination="gVR-g9-r4n" kind="show" id="D0G-q9-XCE"/>
-                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="npg-rc-I0s">
                                 <frame key="frameInset" minX="45" minY="100" width="285" height="466"/>
@@ -300,8 +298,7 @@
         <image name="M-EAGAN_WILDCATS_ksu_for_website-01_1024x1024.png" width="1024" height="1024"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Xio-XO-IvK"/>
-        <segue reference="Mt7-R7-UsF"/>
         <segue reference="bFa-3a-KjP"/>
+        <segue reference="cng-iE-UJh"/>
     </inferredMetricsTieBreakers>
 </document>
